Fixing bug in installment edit
